# fario

./: .env.sample  .gitignore  CHANGELOG.md  LICENSE  README.md  far2json  fario-cast  fario-fid-byname  fario-in  fario-new-signer  fario-out  fario-remove-signer  fario-resign  fario-sign  fario2json  funding.json  pyproject.toml  requirements.txt
HOWTO/: Create_and_use_Signers_with_fario.md  Examples.md  How_to_get_access_to_a_hub.md  README.md  Working_with_far_data_encoding.md
fario/: config.py  fario-account.py  fario2json.py  fario_account.py  fario_cast.py  fario_fid_byname.py  fario_grep.py  fario_hub_info.py  fario_in.py  fario_new_signer.py  fario_out.py  fario_pprint.py  fario_remove_signer.py  fario_sign.py  fario_signers.py  fario_userdata.py  fcshUtils.py  json2fario.py  textcast.py  utils.py
fario/protobuf_to_dict/: README  __init__.py
protobuf_to_dict/: __init__.py  convertor.py
