[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "fario"
version = "0.3"
readme = "README.md"
license = "MIT"
keywords = ['farcaster']
dependencies = [
    "farcaster-py",
    "six",
    'importlib-metadata; python_version<"3.8"',
]

[project.urls]
Documentation = "https://github.com/vrypan/fario"
Source = "https://github.com/vrypan/fario"

[project.scripts]
fario-cast="fario.fario_cast:main"
fario-fid-byname="fario.fario_fid_byname:main"
fario-in="fario.fario_in:main"
fario-new-signer="fario.fario_new_signer:main"
fario-out="fario.fario_out:main"
fario-remove-signer="fario.fario_remove_signer:main"
fario-sign="fario.fario_sign:main"
fario2json="fario.fario2json:main"

[tool.setuptools.packages]
find = {}
