[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "fario"
dynamic = ['version']
readme = "README.md"
license = "MIT"
keywords = ['farcaster']
dependencies = [
    "farcaster-py",
    "six",
    'importlib-metadata; python_version<"3.8"',
]

[project.urls]
Documentation = "https://github.com/vrypan/fario"
Source = "https://github.com/vrypan/fario"

[project.scripts]
fario-cast="fario.fario_cast:main"
fario-fid-byname="fario.fario_fid_byname:main"
fario-in="fario.fario_in:main"
fario-out="fario.fario_out:main"
fario-signers="fario.fario_signers:main"
fario2json="fario.fario2json:main"

[tool.setuptools.packages]
find = {}

[tool.hatch.version]
path = "fario/__about__.py"
