[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "fario"
dynamic = ["version", "dependencies"]

readme = "README.md"
license = "MIT"
keywords = ['farcaster']

[project.urls]
Documentation = "https://github.com/vrypan/fario"
Source = "https://github.com/vrypan/fario"

[project.scripts]
fario-cast="fario.fario_cast:main"
fario-fid-byname="fario.fario_fid_byname:main"
fario-in="fario.fario_in:main"
fario-out="fario.fario_out:main"
fario-signers="fario.fario_signers:main"
fario-account="fario.fario_account:main"
fario-grep="fario.fario_grep:main"
fario2json="fario.fario2json:main"
json2fario="fario.json2fario:json2fario"
fario-config="fario.config:cmd_conf"
fario-hubinfo="fario.fario_hub_info:get_hub_info"

[tool.setuptools.packages]
find = {}

[tool.hatch.version]
path = "fario/__about__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]